# docker

./: .gitignore
.github/workflows/: main.yml
ambari_hdp/: .env  docker-compose.yml  submit-blueprint.sh
app-logging/: docker-compose.yml
app-logging/fluentd/: fluent.conf
app-logging/nginx/: Dockerfile  nginx.conf
app-logging/node/: Dockerfile  index.js  package-lock.json  package.json
deno/: Dockerfile  deps.ts  docker-compose.yml  echo_server.ts
droneio/: docker-compose.yml  memo.md
droneio/drone-cli/: .drone.yml  docker-compose.yml
drupal/: .env  Dockerfile  docker-compose.yml
fluent-elastic-kibana/: .env.sample  docker-compose.yml
fluent-elastic-kibana/fluentd/: Dockerfile  (+4 more)
flutter/: docker-compose.yml
go/: docker-compose.yml
haskell/: docker-compose.yml
influxdb/: docker-compose.yml
jupyter-lab/: Dockerfile  docker-compose.yml  start.sh
kaggle_python/: Dockerfile  docker-compose.yml
localstack/: docker-compose.yml
metabase/: docker-compose.yml
monitoring/: .env.grafana  docker-compose.yml
opendronemap/: docker-compose.yml
php/: .env  .env_db  Dockerfile-mysql  Dockerfile-php  docker-compose.yml
python/: Dockerfile  docker-compose.yml  pyproject.toml
python-keras-gpu/: Dockerfile  build_run.sh
python-poetry/: Dockerfile  docker-compose.yml  pyproject.toml
redash/: docker-compose.yml
rust/: docker-compose.yml
schemaspy/: docker-compose.yml  start.sh
superset/: .env  Dockerfile  docker-compose.yml
swagger/: docker-compose.yml
zabbix/: .env_agent  .env_db_mysql  .env_web  Dockerfile  docker-compose.yml
(+264 files in other folders)
