[tool.poetry]
name = "jl"
version = "0.1.0"
description = ""
authors = ["uni-3"]

[tool.poetry.dependencies]
python = "^3.6.5"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
gensim = "^3.8.1"
japanize-matplotlib = "^1.0.5"
scikit-learn = "^0.22.2"
jupyter = "^1.0.0"
jupyterlab = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
