[tool.poetry]
name = "python_analytics"
version = "0.1.0"
description = ""
authors = ["uni"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyterlab = "^1.2.4"
pandas = "^0.25.3"
numpy = "^1.18.0"
scipy = "^1.4.1"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
japanize-matplotlib = "^1.0.5"
pandas-profiling = "^2.3.0"
causal-impact = "^1.2.1"
tqdm = "^4.41.1"
lightgbm = "^2.3.1"
swifter = "^0.297"
umap-learn = "^0.3.10"
optuna = "^0.19.0"
yellowbrick = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
